--- a/index.html
+++ b/index.html
@@ -142,16 +142,82 @@ https://www.tooplate.com/view/2121-wave-cafe
                 <div class="tm-list-item tm-list-item-2">                
                   <!-- <img src="img/about-1.png" alt="Image" class="tm-list-item-img tm-list-item-img-big"> -->
                   <div class="tm-list-item-text-2">
-                    <p class="tm-list-item-text-2-p">名仕7两  <span class="tm-list-item-text-2-2">880/瓶</span></p>
-                    <p class="tm-list-item-text-2-p">名仕7两  <span class="tm-list-item-text-2-2">880/瓶</span></p>
-                    <p class="tm-list-item-text-2-p">名仕7两  <span class="tm-list-item-text-2-2">880/瓶</span></p>
-                    <p class="tm-list-item-text-2-p">名仕7两  <span class="tm-list-item-text-2-2">880/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">名仕7两  <span class="tm-list-item-text-2-2">500/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">角马7两  <span class="tm-list-item-text-2-2">530/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">名仕1.4斤  <span class="tm-list-item-text-2-2">900/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">名仕2斤  <span class="tm-list-item-text-2-2">1450/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">名仕3斤  <span class="tm-list-item-text-2-2">1800/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">角马1.4斤  <span class="tm-list-item-text-2-2">950/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">角马2斤  <span class="tm-list-item-text-2-2">1450/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">蓝带干邑1.4斤  <span class="tm-list-item-text-2-2">1880/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">蓝带干邑2斤  <span class="tm-list-item-text-2-2">2580/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">轩尼诗xo1.4斤  <span class="tm-list-item-text-2-2">2580/瓶</span></p>
+
+                  </div>                
+                </div>
+              </div>
+            </div>
+
+            <div id="wines" class="tm-tab-content">
+              <div class="tm-black-bg tm-mb-20 tm-about-box-1">              
+                <h2 class="tm-text-primary tm-about-header">白兰地 · Brandy</h2>
+                <div class="tm-list-item tm-list-item-2">                
+                  <!-- <img src="img/about-1.png" alt="Image" class="tm-list-item-img tm-list-item-img-big"> -->
+                  <div class="tm-list-item-text-2">
+                    <p class="tm-list-item-text-2-p">法国萨科森之门 <span class="tm-list-item-text-2-2">208/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">奔富洛神山庄  <span class="tm-list-item-text-2-2">228/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">舞动金鱼精选赤霞珠干红  <span class="tm-list-item-text-2-2">238/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">凯萨雄狮精品赤霞珠干红  <span class="tm-list-item-text-2-2">288/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">纷赋金牌纪念版  <span class="tm-list-item-text-2-2">388/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">奔富寇兰山76版  <span class="tm-list-item-text-2-2">350/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">奔富BIN8  <span class="tm-list-item-text-2-2">680/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">奔富BIN28  <span class="tm-list-item-text-2-2">780/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">奔富BIN128  <span class="tm-list-item-text-2-2">850/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">奔富BIN389  <span class="tm-list-item-text-2-2">1050/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">舞动金鱼霞多丽干白  <span class="tm-list-item-text-2-2">238/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">宝珞庄园起泡酒（无酒精）  <span class="tm-list-item-text-2-2">268/瓶</span></p>
+                    </br>
+                    <p><span class="tm-list-item-text-2-3">
+                    以下红酒（周一至周四）买二送一
+                    <br>
+                    周五六日及国家法定节日此优惠不可用
+                  </span></p>
+                  <p class="tm-list-item-text-2-p">法国萨科森之门  <span class="tm-list-item-text-2-2">416/套</span></p>
+                  <p class="tm-list-item-text-2-p">奔富洛神山庄  <span class="tm-list-item-text-2-2">456/套</span></p>
+                  <p class="tm-list-item-text-2-p">舞动金鱼精选赤霞珠干红  <span class="tm-list-item-text-2-2">476/套</span></p>
+                  <p class="tm-list-item-text-2-p">凯萨雄狮精品赤霞珠干红  <span class="tm-list-item-text-2-2">576/套</span></p>
+                  <p class="tm-list-item-text-2-p">纷赋金牌纪念版  <span class="tm-list-item-text-2-2">776/套</span></p>
+
+
+
 
 
                   </div>                
                 </div>
               </div>
             </div>
+
+            <div id="else" class="tm-tab-content">
+              <div class="tm-black-bg tm-mb-20 tm-about-box-1">              
+                <h2 class="tm-text-primary tm-about-header">其他 · Else</h2>
+                <div class="tm-list-item tm-list-item-2">                
+                  <!-- <img src="img/about-1.png" alt="Image" class="tm-list-item-img tm-list-item-img-big"> -->
+                  <div class="tm-list-item-text-2">
+                    <p class="tm-list-item-text-2-p">野格利口酒 <span class="tm-list-item-text-2-2">450/套</span></p>
+                    <p class="tm-list-item-text-2-p">意大利冰粉红X  <span class="tm-list-item-text-2-2">450/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">绝对伏特加  <span class="tm-list-item-text-2-2">420/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">玉响威士忌梅子酒  <span class="tm-list-item-text-2-2">450/支 | 80/杯</span></p>
+                    <p class="tm-list-item-text-2-p">山崎梅酒  <span class="tm-list-item-text-2-2">500/支 | 50/杯</span></p>
+                    <p class="tm-list-item-text-2-p">矿泉水  <span class="tm-list-item-text-2-2">10/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">大象牌苏打水  <span class="tm-list-item-text-2-2">15/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">椰汁  <span class="tm-list-item-text-2-2">10/瓶</span></p>
+                    <p class="tm-list-item-text-2-p">可乐  <span class="tm-list-item-text-2-2">10/瓶</span></p>
+
+                  </div>                
+                </div>
+              </div>
+            </div>
+
           </div>
         </main>
       </div>
