--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ https://www.tooplate.com/view/2121-wave-cafe
 
             <div id="wines" class="tm-tab-content">
               <div class="tm-black-bg tm-mb-20 tm-about-box-1">              
-                <h2 class="tm-text-primary tm-about-header">白兰地 · Brandy</h2>
+                <h2 class="tm-text-primary tm-about-header">葡萄酒 · Wines</h2>
                 <div class="tm-list-item tm-list-item-2">                
                   <!-- <img src="img/about-1.png" alt="Image" class="tm-list-item-img tm-list-item-img-big"> -->
                   <div class="tm-list-item-text-2">
